fix: formItem error message wrap

--- a/src/foundations/styles/components/elements/form/form-item-wrap.module.scss
+++ b/src/foundations/styles/components/elements/form/form-item-wrap.module.scss
@@ -191,6 +191,7 @@ $tagMoveTransitionTime: 0.5s;
 
   .text {
     padding-top: var(padding-top-text);
+    white-space: pre-wrap;
   }
 
 }
